--- a/EcoTracker/TrackerTypes.plist
+++ b/EcoTracker/TrackerTypes.plist
@@ -54,5 +54,7 @@
 	<string>Принимать душ вместо ванны</string>
 	<key>vegan_day</key>
 	<string>Веган-день</string>
+	<key>free_cleaning</key>
+	<string>Волонтерская уборка мусора</string>
 </dict>
 </plist>
